--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymleaf.org">
+<html lang="en" xmlns:th="https://www.thymeleaf.org/">
 
 <head th:replace="fragments :: header">
 </head>
@@ -59,7 +59,12 @@
                                    class="btn btn-primary">Изменить
                                 </a>
                             </td>
-                            <td></td>
+                            <td>
+                                <a th:if="${category.is_activated}== false" th:href="@{/enable-category(id = ${category.id})}"
+                                   class="btn btn-primary">Enable</a>
+                                <a th:if="${category.is_activated}== true" th:href="@{/delete-category(id = ${category.id})}"
+                                   class=" btn btn-danger">Delete</a>
+                            </td>
                         </tr>
                         </tbody>
 
@@ -81,25 +86,54 @@
     <!-- Scroll to Top Button-->
     <a th:replace="fragments :: scroll" >
     </a>
-
+    <!--new category-->
     <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalExample" aria-hidden="true">
-        <form>
+        <form th:action="@{/update-category}" method="put">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" >Изменить категории</h1>
+                    </div>
+                    <div class="modal-body">
+
+                        <div class="form-group">
+                            <label for="idEdit" class="col-form-label">ID
+                            </label> <input type="text" class="form-control" id="idEdit" name="id" readonly>
+                        </div>
+                        <div class="form-group">
+                            <label for="nameEdit" class="col-form-label">Category
+                                Name</label> <input type="text" class="form-control" id="nameEdit" name="name">
+                        </div>
+
+
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="submit" class="btn btn-primary">Соxранить</button>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+
+
+
+
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLable" aria-hidden="true">
+        <form th:action="@{/add-category}", method="post" th:object="${categoryNew}">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1 class="modal-title fs-5" >Изменить категории</h1>
+                    <h1 class="modal-title fs-5" id="exampleModalLabel" >Добавить категории</h1>
                 </div>
                 <div class="modal-body">
 
                     <div class="mb-3">
-                        <label for="nameEdit" class="col-form-label">Название:</label>
-                        <input type="text" class="form-control"id="nameEdit" name = "nameEdit">
+                        <label for="recipient-name" class="col-form-label">Название:</label>
+                        <input type="text" class="form-control" th:field="*{name}" id="recipient-name" >
                     </div>
 
-                        <div class="mb-3">
-                            <label for="idEdit" class="col-form-label">Номер:</label>
-                            <input type="text" class="form-control"id="idEdit" name = "idEdit">
-                        </div>
+
 
 
                 </div>
@@ -113,6 +147,8 @@
     </div>
 
     <div th:replace="fragments :: script"></div>
+
+<script th:src="@{/js/categories.js}"></script>
 
 
 </body>
