--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymleaf.org/">
+<html lang="en" xmlns:th="https://www.thymeleaf.org/">
 
 <head th:fragment="header">
 
@@ -393,6 +393,8 @@
 
     <!-- Custom scripts for all pages-->
     <script th:src="@{js/sb-admin-2.min.js}"></script>
+
+
 </div>
 
 </body>
