--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymleaf.org/">
+<html lang="en" xmlns:th="https://www.thymeleaf.org/">
 
 <head th:replace="fragments :: header"></head>
 
@@ -45,10 +45,10 @@
                                     </form>
                                     <hr>
                                     <div class="text-center">
-                                        <a class="small" th:href="@{forgot-password}" href="forgot-password.html">Forgot Password?</a>
+                                        <a class="small" th:href="@{/forgot-password}" >Forgot Password?</a>
                                     </div>
                                     <div class="text-center">
-                                        <a class="small" th:href="@{register}" href="register.html">Create an Account!</a>
+                                        <a class="small" th:href="@{/register}" >Create an Account!</a>
                                     </div>
                                 </div>
                             </div>
