--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -33,10 +33,10 @@
                     <div th:if="${size == 0}" >
                         <p>Нет товаров</p>
                     </div>
-                    <div th:if="${success}" >
-                        <p th:text="${success}"></p>
+                    <div th:if="${success}" class="text-center alert alert-success" >
+                        <p th:text="${success}" ></p>
                     </div>
-                    <div th:if="${error}" >
+                    <div th:if="${error}" class="text-center alert alert-warning" >
                         <p th:text="${error}"></p>
                     </div>
                     <a  class="btn btn-primary"  th:href="@{/add-product}">Добавить товар</a>
@@ -53,14 +53,22 @@
                         </tr>
                         </thead>
                         <tbody>
-                        <tr th:each="products : ${products}">
-                            <th scope="row " th:text="${products.name}"></th>
-                            <td th:text="${products.category.name}"></td>
-                            <td th:text="${products.costPrice}"></td>
-                            <td th:text="${products.currentQuantity}"></td>
-                            <td ></td>
-                            <td></td>
-                            <td></td>
+                        <tr th:each="product : ${products}">
+                            <th scope="row " th:text="${product.name}"></th>
+                            <td th:text="${product.category.name}"></td>
+                            <td th:text="${product.costPrice}"></td>
+                            <td th:text="${product.currentQuantity}"></td>
+                            <td >
+                                <img class = "" style="height: 40px; width: 40px;" alt=""
+                                     th:src="'data:image/jpeg;base64,' + ${product.image}">
+                            </td>
+                            <td>
+                                <a th:href="@{/update-product/{id} (id = ${product.id})}" class="btn btn-primary">Изменить</a>
+                            </td>
+                            <td>
+                                <a th:if="${product.activated== false}" th:href="@{/enabled-product/{id} (id= ${product.id}) }" class="btn btn-warning">Доступен</a>
+                                <a th:if="${product.deleted == false}" th:href="@{/delete-product/{id} (id=${product.id}) }"  class="btn btn-danger">Удалить</a>
+                            </td>
                         </tr>
                         </tbody>
 
