--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymleaf.org/">
+<html lang="en" xmlns:th="https://www.thymeleaf.org/">
 
 <head th:replace="fragments :: header"></head>
 
@@ -66,10 +66,10 @@
                             </form>
                             <hr>
                             <div class="text-center">
-                                <a class="small" th:href="@{forgot-password}" href="forgot-password.html">Forgot Password?</a>
+                                <a class="small" th:href="@{/forgot-password}" >Forgot Password?</a>
                             </div>
                             <div class="text-center">
-                                <a class="small" th:href="@{login}" >Already have an account? Login!</a>
+                                <a class="small" th:href="@{/login}" >Already have an account? Login!</a>
                             </div>
                         </div>
                     </div>
