Поиск товара в админ панели

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -63,7 +63,7 @@
             <div class="bg-white py-2 collapse-inner rounded">
                 <h6 class="collapse-header">Custom Components:</h6>
                 <a class="collapse-item" href="categories.html" th:href="@{/categories}">Категории</a>
-                <a class="collapse-item" href="products.html" th:href="@{/products}" >Товары</a>
+                <a class="collapse-item" href="products.html" th:href="@{/products/0}" >Товары</a>
             </div>
         </div>
     </li>
